--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -63,7 +63,7 @@ import ModelImage from "~/img/model_image.png";
         .content {
           flex-direction: column;
           img {
-            margin-bottom: vw(23px);
+            margin: 0 auto vw(23px);
           }
           .text {
             font-size: vw(14px);
