--- a/src/components/common/LoopSection.astro
+++ b/src/components/common/LoopSection.astro
@@ -65,7 +65,7 @@ const { contents, class: className } = Astro.props;
       max-width: 100%;
       padding: 0 vw(31px);
       img {
-        margin-bottom: vw(25px);
+        margin: 0 auto vw(25px);
       }
       + .loop_content {
         flex-direction: column;
