--- a/src/components/global/SNSList.astro
+++ b/src/components/global/SNSList.astro
@@ -8,22 +8,22 @@ import Youtube from "~/img/sns_youtube.png";
 
 <nav class="sns_list">
   <ul>
-    <li>
+    <li class="in">
       <a href="https://www.instagram.com/ienokoto_no_ie/">
         <Image width={31} height={31} src={Instagram} alt="Instagram" />
       </a>
     </li>
-    <li>
+    <li class="li">
       <a href="https://page.line.me/234qzcdl/">
         <Image width={31} height={31} src={Line} alt="Line" />
       </a>
     </li>
-    <li>
+    <li class="yt">
       <a href="https://www.youtube.com/@user-lx1vd6ev3t/">
         <Image width={30} height={22} src={Youtube} alt="Youtube" />
       </a>
     </li>
-    <li>
+    <li class="fb">
       <a href="https://www.facebook.com/ienokoto/">
         <Image width={28} height={28} src={Facebook} alt="Facebook" />
       </a>
