--- a/src/pages/consult.astro
+++ b/src/pages/consult.astro
@@ -71,9 +71,9 @@ import { Image } from "@astrojs/image/components";
   <section class="consult_detail">
     <h2 class="consult_detail_title">詳細</h2>
     <p class="consult_detail_content">
-      【開催日時】　　毎月第２水曜　10:00～15:00（１組2時間）<br />
-      【開催場所】　　イエノコトモデルハウス<br />
-      【予約方法】　　0120-200-789までお電話ください。<br />
+      【開催日時】<span class="pc">　　</span><br class="sp">毎月第２水曜　10:00～15:00<br class="sp">（１組2時間）<br />
+      【開催場所】<span class="pc">　　</span><br class="sp">イエノコトモデルハウス<br />
+      【予約方法】<span class="pc">　　</span><br class="sp">0120-200-789までお電話ください。<br />
     </p>
   </section>
   <section class="inquiry_more">
@@ -104,7 +104,7 @@ import { Image } from "@astrojs/image/components";
         content: "";
         width: 27px;
         height: 27px;
-        background: url("./icon_check.svg") center center;
+        background: url("./icon_check.svg") no-repeat center center/cover;
         left: -44px;
         top: -39%;
       }
@@ -158,5 +158,64 @@ import { Image } from "@astrojs/image/components";
   }
   .inquiry_more {
     margin-bottom: 267px;
+  }
+  @media screen and (max-width: $mobileBreakPoint) {
+    .consult_list {
+      margin-top: vw(100px);
+    }
+    .consult_list_title {
+      margin-bottom: vw(63px);
+    }
+    .consult_list_content {
+      max-width: vw(calc($mobileDesignWidth - 44px * 2));
+      padding-left: vw(48px);
+      dt {
+        margin-bottom: vw(22px);
+        &:before {
+          width: vw(27px);
+          height: vw(27px);
+          left: vw(-44px);
+        }
+      }
+      dd {
+        + dt {
+          margin-top: vw(45px);
+        }
+      }
+    }
+    .consult_expart {
+      margin-top: vw(107px);
+    }
+    .consult_expart_title {
+      margin-bottom: vw(60px);
+    }
+    .consult_expart_content {
+      flex-direction: column;
+      gap: vw(70px);
+      li {
+        h4 {
+          font-size: vw(16px);
+          margin: vw(34px) 0 vw(10px);
+        }
+        p {
+          display: table;
+          font-size: vw(12px);
+          margin: 0 auto;
+        }
+      }
+    }
+    .consult_detail {
+      padding: 0 vw(56px);
+      margin: vw(100px) auto vw(50px);
+    }
+    .consult_detail_title {
+      margin-bottom: vw(60px);
+    }
+    .inquiry_more {
+      margin-bottom: vw(100px);
+    }
+    .inquiry_more_title {
+      margin-bottom: vw(34px);
+    }
   }
 </style>
