--- a/src/pages/staff/[id].astro
+++ b/src/pages/staff/[id].astro
@@ -135,7 +135,7 @@ if (!staff) return;
         content: "";
         width: 27px;
         height: 27px;
-        background: url("../../icon_check.svg") center center;
+        background: url("../../icon_check.svg") no-repeat center center/cover;
         vertical-align: middle;
         display: inline-block;
         margin-right: 21.5px;
@@ -153,5 +153,54 @@ if (!staff) return;
     text-align: center;
     max-width: 50%;
     margin: auto;
+  }
+  @media screen and (max-width: $mobileBreakPoint) {
+    .staff_detail {
+      padding-top: vw(30px);
+    }
+    .staff_content {
+      margin: vw(66px) auto vw(100px);
+    }
+    .profile_box {
+      flex-direction: column-reverse;
+      img {
+        max-width: vw(242px);
+        margin: 0 auto;
+      }
+    }
+    .staff_name {
+      text-align: center;
+      font-size: vw(24px);
+      margin: vw(28px) 0 vw(21px);
+    }
+    .staff_title {
+      text-align: center;
+      padding: 0;
+    }
+    dl.staff_detail {
+      max-width: vw(296px);
+      padding: 0;
+      margin-top: vw(77px);
+      dt {
+        margin-bottom: vw(31px);
+        &:before {
+          width: vw(27px);
+          height: vw(27px);
+          margin-right: vw(21.5px);
+        }
+      }
+      dd {
+        padding: 0;
+        margin-bottom: vw(68px);
+        :global(img) {
+          display: block;
+          max-width: vw(184px);
+          margin: 0 auto;
+        }
+      }
+    }
+    .search_more {
+      max-width: 100%;
+    }
   }
 </style>
