--- a/src/components/common/LoopSection.astro
+++ b/src/components/common/LoopSection.astro
@@ -46,6 +46,9 @@ const { contents, class: className } = Astro.props;
     + .loop_content {
       margin-top: 197px;
     }
+    img {
+      height: 100%;
+    }
   }
   .loop_content:nth-of-type(2n) {
     flex-direction: row-reverse;
