--- a/src/components/post/EventList.astro
+++ b/src/components/post/EventList.astro
@@ -92,6 +92,9 @@ const { title } = Astro.props;
       margin-top: 0;
       li {
         width: 100%;
+        &:not(:first-child) {
+          display: none;
+        }
       }
     }
     img {
