--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -37,6 +37,9 @@ import ModelImage from "~/img/model_image.png";
           column-gap: vw(95px, $baseWindowWidth);
         }
         margin: auto;
+        img {
+          height: 100%;
+        }
         .text {
           max-width: 563px;
           line-height: calc(30 / 16);
