ナビゲーション調整ほか

--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -14,12 +14,18 @@ import ModelImage from "~/img/model_image.png";
       モデルハウスは貸しスペースも行っており、ヨガ教室や料理教室、韓国語講座などにもご利用いただいています。<br
       />
       <br />
-      モデルハウス見学ご希望の方は、<br class="sp"><a href="tel:0120-200-789">0120-200-789</a
+      モデルハウス見学ご希望の方は、<br class="sp" /><a
+        href="tel:0120-200-789"
+        onclick="ga('send', 'event', 'Inquiry', 'Send', 'By tel');"
+        >0120-200-789</a
       >まで事前にご予約ください。<br />
       <br />
       <dl class="contact">
         <dt>営業時間</dt><dd>10:00～17:00（水曜定休）</dd>
-        <dt>所在地</dt><dd>福岡県太宰府市通古賀5-2-3<br>※駐車場あり<br>※西鉄大牟田線都府楼前駅より徒歩１０分</dd>
+        <dt>所在地</dt><dd>
+          福岡県太宰府市通古賀5-2-3<br />※駐車場あり<br
+          />※西鉄大牟田線都府楼前駅より徒歩１０分
+        </dd>
       </dl>
     </div>
   </div>
