--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -47,7 +47,10 @@ import { PAGES } from "../../consts";
   </div>
   <div class="footer-sns">
     <SNSList />
-    <small>Copyright©イエノコト株式会社<span class="pc">　 </span><br class="sp">All Rgiths Reserved</small>
+    <small
+      >Copyright©イエノコト株式会社<span class="pc"> </span><br class="sp" />All
+      Rgiths Reserved</small
+    >
   </div>
   <div class="footer-tel">
     <a href="tel:0120-200-789">TEL　0120-200-789</a>
@@ -184,10 +187,11 @@ import { PAGES } from "../../consts";
         color: white;
         font-size: vw(24px);
         font-weight: bold;
-        line-height: vw(20px);
+        height: vw(50px);
+        line-height: vw(50px);
         text-align: center;
-        background: rgba(#6C6C60, 0.72);
-        padding: vw(10px) 0;
+        background: rgba(#6c6c60, 0.72);
+        padding: 0;
       }
     }
     .goback {
