--- a/src/components/reform/StoriesList.astro
+++ b/src/components/reform/StoriesList.astro
@@ -109,7 +109,7 @@ if (!ReformPosts) return;
     }
     .story_spec {
       font-size: vw(14px);
-      text-align: center;
+      // text-align: center;
       width: 100%;
       padding: 0 vw(30px);
       margin: 0;
