--- a/src/components/global/Navi.astro
+++ b/src/components/global/Navi.astro
@@ -13,6 +13,15 @@ const isHome = Astro.url.pathname === "/";
     const nav = document.querySelector("nav");
     nav?.classList.remove("fade");
   }
+  //
+  if (window.outerWidth <= 1024) {
+    window.onscroll = (event) => {
+      const nav = document.querySelector("nav");
+      window.scrollY > 10
+        ? nav?.classList.add("on_scroll")
+        : nav?.classList.remove("on_scroll");
+    };
+  }
 </script>
 
 <nav class={isHome ? "fade" : ""}>
@@ -52,9 +61,7 @@ const isHome = Astro.url.pathname === "/";
     height: 85px;
     line-height: 85px;
     background-color: rgba($color: #6c6c60, $alpha: 0.72);
-    @media screen and (max-width: $mobileBreakPoint) {
-      background: none;
-    }
+
     .wrap {
       max-width: 1676px;
       margin: auto;
@@ -65,17 +72,9 @@ const isHome = Astro.url.pathname === "/";
         padding-right: 130px;
         justify-content: space-between;
       }
-      > a {
-        @media screen and (max-width: $mobileBreakPoint) {
-          pointer-events: none;
-        }
-      }
     }
     .logo {
       margin-top: 21px;
-      @media screen and (max-width: $mobileBreakPoint) {
-        opacity: 0;
-      }
     }
     li {
       color: #fff;
@@ -87,8 +86,6 @@ const isHome = Astro.url.pathname === "/";
   }
   @media screen and (max-width: 1024px) {
     nav {
-      // background-color: transparent;
-      // width: 80px;
       right: 0;
       .wrap {
         display: block;
@@ -139,10 +136,33 @@ const isHome = Astro.url.pathname === "/";
     .slide_bar {
       display: block;
       width: 100%;
-      border-top: solid 4px #707070;
+      border-top: solid 4px #fff;
       margin-bottom: 10px;
       border-radius: 5px;
       transition: transform 0.25s ease;
+    }
+  }
+  @media screen and (max-width: $mobileBreakPoint) {
+    nav {
+      position: fixed;
+      background-color: transparent;
+      transition: opacity, background-color 0.7s;
+      .logo {
+        opacity: 0;
+      }
+      .slide_bar {
+        border-color: #707070;
+      }
+      &.on_scroll {
+        background-color: rgba(108, 108, 96, 0.72);
+
+        .logo {
+          opacity: 1;
+        }
+        .slide_bar {
+          border-color: #fff;
+        }
+      }
     }
   }
   :global(.open) {
