サイト指摘部分微修正（スタッフ画像等）

--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -64,7 +64,7 @@ const navContents: NavContent[] = [
     subtitle: "暮らしの専門家、家事セラピスト養成講座のご案内",
     description:
       "片付けをさらにさらに学びたい、仕事につなげたい方向けの専門資格、家事セラピストになりませんか？",
-    link: "/#",
+    link: "https://kajitherapist.hp.peraichi.com/kaji",
   },
   {
     image: NavStaff,
