リンク追加

--- a/src/components/learn/AboutLecture.astro
+++ b/src/components/learn/AboutLecture.astro
@@ -16,7 +16,7 @@ const contents = [
         <br />
         また、片付けの専門資格、家事セラピスト養成講座もご用意しています。
         <br />
-        本格的に片付けを学びたい方は、こちらをご参照ください。
+        本格的に片付けを学びたい方は、<a href="https://kajitherapist.hp.peraichi.com/kaji">こちら</a>をご参照ください。
       `,
   },
   {
