--- a/src/components/post/ColumnList.astro
+++ b/src/components/post/ColumnList.astro
@@ -67,8 +67,9 @@ const { title, noTitle = false, copy } = Astro.props;
     }
   }
   li {
+    width: 322px;
     @media screen and (max-width: 1300px) {
-      width: vw(322px, 1000px);
+      width: vw(322px, 1300px);
     }
   }
   img {
