バナーリンク修正

--- a/src/components/common/ContentBanner.astro
+++ b/src/components/common/ContentBanner.astro
@@ -8,7 +8,7 @@ import BannerAkiya from "~/img/banner_akiya.png";
 <nav class="content-banner">
   <ul>
     <li>
-      <a href="https://www.facebook.com/">
+      <a href="http://www.g-cpc.org/">
         <Image
           src={BannerKajijuku}
           width={235}
@@ -19,7 +19,7 @@ import BannerAkiya from "~/img/banner_akiya.png";
       </a>
     </li>
     <li>
-      <a href="https://www.facebook.com/">
+      <a href="http://www.g-cpc.org/">
         <Image
           src={BannerSaisei}
           width={500}
@@ -30,7 +30,7 @@ import BannerAkiya from "~/img/banner_akiya.png";
       </a>
     </li>
     <li>
-      <a href="https://www.facebook.com/">
+      <a href="https://dazaifu-akiya.com/">
         <Image
           src={BannerAkiya}
           width={258}
