家事塾リンク修正

--- a/src/components/common/ContentBanner.astro
+++ b/src/components/common/ContentBanner.astro
@@ -8,7 +8,7 @@ import BannerAkiya from "~/img/banner_akiya.png";
 <nav class="content-banner">
   <ul>
     <li>
-      <a href="http://www.g-cpc.org/">
+      <a href="https://www.kajijuku.com/">
         <Image
           src={BannerKajijuku}
           width={235}
