古民家再生協会リンク修正

--- a/src/pages/reproduction.astro
+++ b/src/pages/reproduction.astro
@@ -26,15 +26,19 @@ import BannerKominkaSaisei from "~/img/banner_kominka_saisei.png";
   <ContentDetails />
   <InquiryMore />
   <section class="banner">
-    <h4 class="banner_title">イエノコトは古民家再生協会に<br class="sp">所属しています</h4>
-    <Image
-      src={BannerKominkaSaisei}
-      width={500}
-      height={72}
-      alt="全国古民家再生協議会"
-      format="webp"
-      loading="lazy"
-    />
+    <h4 class="banner_title">
+      イエノコトは古民家再生協会に<br class="sp" />所属しています
+    </h4>
+    <a href="http://www.g-cpc.org/">
+      <Image
+        src={BannerKominkaSaisei}
+        width={500}
+        height={72}
+        alt="全国古民家再生協議会"
+        format="webp"
+        loading="lazy"
+      />
+    </a>
   </section>
 </PageContent>
 <style lang="scss">
