TOPキャッチとResetCSSエラー修正

--- a/src/components/catch/TopCatch.astro
+++ b/src/components/catch/TopCatch.astro
@@ -21,7 +21,7 @@ import Logo from "~/img/top/top_logo.png";
   />
   <div class="top_catch_logo">
     <Image src={Logo} alt="イエノコト" format="webp" width={467} />
-    <p class="sub_copy">日本の伝統と文化を次世代につなぎます</p>
+    <p class="sub_copy">日本の暮らしと文化を次世代につなぎます</p>
   </div>
   <a class="top_scroll" href="#top">
     <Image
