--- a/src/layouts/PageContent.astro
+++ b/src/layouts/PageContent.astro
@@ -1,5 +1,5 @@
 ---
-import "reset-css";
+import "../../node_modules/reset-css/reset.css";
 import "../styles/global.scss";
 import Navi from "~/components/global/Navi.astro";
 import Head from "~/components/global/Head.astro";
