TOPサブコピー文言変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,17 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    イエノコトは太宰府市通古賀にある工務店。 <br />
+    九月二十九日は中秋の名月です。 <br />
+
+    月の読み方はたくさんあり <br />
+
+    日本語の豊かさを感じます。 <br />
+
+    「月々に月見る月は多けれど　月見る月はこの月の月」
+    <!-- イエノコトは太宰府市通古賀にある工務店。 <br />
     いくら素敵な家を建てても、<br />
     暮らしが整っていなくて、毎日イライラ<br />
-    していたらなんだか幸せじゃない。
+    していたらなんだか幸せじゃない。 -->
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
   </p>
